# External-Hook-API

./: CMakeLists.txt  README.md  about.md  changelog.md  logo.pdn  mod.json
include/: HookClass.hpp
src/: HookClass.cpp  main.cpp
